--- a/framework/css/foundation.css
+++ b/framework/css/foundation.css
@@ -39,7 +39,7 @@ body {
   font-size: 100%; }
 
 body {
-  background: url("./img/top_level_masonry_image_background.png");
+  background: url("././img/top_level_masonry_image_background.png");
   color: #222222;
   padding: 0;
   margin: 0;
